--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,14 +19,17 @@ jobs:
       with:
         python-version: '3.8'
     
-    - name: Install dependencies
-      run: |
-        pip install mlflow pandas scikit-learn seaborn matplotlib
+    - name: Install Miniconda
+      uses: conda-incubator/setup-miniconda@v3
+      with:
+        auto-update-conda: true
+        python-version: 3.8
     
     - name: Run MLflow Project
+      shell: bash -l {0}
       run: |
         cd MLProject
-        mlflow run . --no-conda
+        mlflow run .
     
     - name: Upload model artifacts
       uses: actions/upload-artifact@v4
